# taskiq_example

./: .env.example  .gitignore  README.md  docker-compose.example  pyproject.toml
app/infrastructure/scheduler/: tasks.py
app/tgbot/: tgbot.py
app/tgbot/handlers/: commands.py
config/: config.py  settings.toml
